deploy: 83fc28d70b3f620895435fb711af003c5f306473

--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -20157,6 +20157,116 @@ references:
   isSpec: "True"
   fullName: MacroTools.Spells.SummonUnits.SummonUnitTypeId
   nameWithType: SummonUnits.SummonUnitTypeId
+- uid: MacroTools.Spells.SummonUnitsTarget
+  name: SummonUnitsTarget
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html
+  commentId: T:MacroTools.Spells.SummonUnitsTarget
+  fullName: MacroTools.Spells.SummonUnitsTarget
+  nameWithType: SummonUnitsTarget
+- uid: MacroTools.Spells.SummonUnitsTarget.#ctor(System.Int32)
+  name: SummonUnitsTarget(Int32)
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget__ctor_System_Int32_
+  commentId: M:MacroTools.Spells.SummonUnitsTarget.#ctor(System.Int32)
+  fullName: MacroTools.Spells.SummonUnitsTarget.SummonUnitsTarget(System.Int32)
+  nameWithType: SummonUnitsTarget.SummonUnitsTarget(Int32)
+- uid: MacroTools.Spells.SummonUnitsTarget.#ctor*
+  name: SummonUnitsTarget
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget__ctor_
+  commentId: Overload:MacroTools.Spells.SummonUnitsTarget.#ctor
+  isSpec: "True"
+  fullName: MacroTools.Spells.SummonUnitsTarget.SummonUnitsTarget
+  nameWithType: SummonUnitsTarget.SummonUnitsTarget
+- uid: MacroTools.Spells.SummonUnitsTarget.AngleOffset
+  name: AngleOffset
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget_AngleOffset
+  commentId: P:MacroTools.Spells.SummonUnitsTarget.AngleOffset
+  fullName: MacroTools.Spells.SummonUnitsTarget.AngleOffset
+  nameWithType: SummonUnitsTarget.AngleOffset
+- uid: MacroTools.Spells.SummonUnitsTarget.AngleOffset*
+  name: AngleOffset
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget_AngleOffset_
+  commentId: Overload:MacroTools.Spells.SummonUnitsTarget.AngleOffset
+  isSpec: "True"
+  fullName: MacroTools.Spells.SummonUnitsTarget.AngleOffset
+  nameWithType: SummonUnitsTarget.AngleOffset
+- uid: MacroTools.Spells.SummonUnitsTarget.Duration
+  name: Duration
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget_Duration
+  commentId: P:MacroTools.Spells.SummonUnitsTarget.Duration
+  fullName: MacroTools.Spells.SummonUnitsTarget.Duration
+  nameWithType: SummonUnitsTarget.Duration
+- uid: MacroTools.Spells.SummonUnitsTarget.Duration*
+  name: Duration
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget_Duration_
+  commentId: Overload:MacroTools.Spells.SummonUnitsTarget.Duration
+  isSpec: "True"
+  fullName: MacroTools.Spells.SummonUnitsTarget.Duration
+  nameWithType: SummonUnitsTarget.Duration
+- uid: MacroTools.Spells.SummonUnitsTarget.Effect
+  name: Effect
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget_Effect
+  commentId: P:MacroTools.Spells.SummonUnitsTarget.Effect
+  fullName: MacroTools.Spells.SummonUnitsTarget.Effect
+  nameWithType: SummonUnitsTarget.Effect
+- uid: MacroTools.Spells.SummonUnitsTarget.Effect*
+  name: Effect
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget_Effect_
+  commentId: Overload:MacroTools.Spells.SummonUnitsTarget.Effect
+  isSpec: "True"
+  fullName: MacroTools.Spells.SummonUnitsTarget.Effect
+  nameWithType: SummonUnitsTarget.Effect
+- uid: MacroTools.Spells.SummonUnitsTarget.OnCast(unit,unit,Point)
+  name: OnCast(unit, unit, Point)
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget_OnCast_unit_unit_Point_
+  commentId: M:MacroTools.Spells.SummonUnitsTarget.OnCast(unit,unit,Point)
+  fullName: MacroTools.Spells.SummonUnitsTarget.OnCast(unit, unit, Point)
+  nameWithType: SummonUnitsTarget.OnCast(unit, unit, Point)
+- uid: MacroTools.Spells.SummonUnitsTarget.OnCast*
+  name: OnCast
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget_OnCast_
+  commentId: Overload:MacroTools.Spells.SummonUnitsTarget.OnCast
+  isSpec: "True"
+  fullName: MacroTools.Spells.SummonUnitsTarget.OnCast
+  nameWithType: SummonUnitsTarget.OnCast
+- uid: MacroTools.Spells.SummonUnitsTarget.Radius
+  name: Radius
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget_Radius
+  commentId: P:MacroTools.Spells.SummonUnitsTarget.Radius
+  fullName: MacroTools.Spells.SummonUnitsTarget.Radius
+  nameWithType: SummonUnitsTarget.Radius
+- uid: MacroTools.Spells.SummonUnitsTarget.Radius*
+  name: Radius
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget_Radius_
+  commentId: Overload:MacroTools.Spells.SummonUnitsTarget.Radius
+  isSpec: "True"
+  fullName: MacroTools.Spells.SummonUnitsTarget.Radius
+  nameWithType: SummonUnitsTarget.Radius
+- uid: MacroTools.Spells.SummonUnitsTarget.SummonCount
+  name: SummonCount
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget_SummonCount
+  commentId: P:MacroTools.Spells.SummonUnitsTarget.SummonCount
+  fullName: MacroTools.Spells.SummonUnitsTarget.SummonCount
+  nameWithType: SummonUnitsTarget.SummonCount
+- uid: MacroTools.Spells.SummonUnitsTarget.SummonCount*
+  name: SummonCount
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget_SummonCount_
+  commentId: Overload:MacroTools.Spells.SummonUnitsTarget.SummonCount
+  isSpec: "True"
+  fullName: MacroTools.Spells.SummonUnitsTarget.SummonCount
+  nameWithType: SummonUnitsTarget.SummonCount
+- uid: MacroTools.Spells.SummonUnitsTarget.SummonUnitTypeId
+  name: SummonUnitTypeId
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget_SummonUnitTypeId
+  commentId: P:MacroTools.Spells.SummonUnitsTarget.SummonUnitTypeId
+  fullName: MacroTools.Spells.SummonUnitsTarget.SummonUnitTypeId
+  nameWithType: SummonUnitsTarget.SummonUnitTypeId
+- uid: MacroTools.Spells.SummonUnitsTarget.SummonUnitTypeId*
+  name: SummonUnitTypeId
+  href: api-macroTools/MacroTools.Spells.SummonUnitsTarget.html#MacroTools_Spells_SummonUnitsTarget_SummonUnitTypeId_
+  commentId: Overload:MacroTools.Spells.SummonUnitsTarget.SummonUnitTypeId
+  isSpec: "True"
+  fullName: MacroTools.Spells.SummonUnitsTarget.SummonUnitTypeId
+  nameWithType: SummonUnitsTarget.SummonUnitTypeId
 - uid: MacroTools.Spells.Transfer
   name: Transfer
   href: api-macroTools/MacroTools.Spells.Transfer.html
