--- a/manifest.json
+++ b/manifest.json
@@ -3645,7 +3645,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.SpellSystem.Spell.html",
-          "hash": "RnHQ+k8K+mMSMp7yRq1haw=="
+          "hash": "kQ5uoowXdut2Yk/WTylpBw=="
         }
       },
       "is_incremental": false,
@@ -4109,6 +4109,18 @@
     },
     {
       "type": "ManagedReference",
+      "source_relative_path": "api-macroTools/MacroTools.Spells.SummonUnitsTarget.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-macroTools/MacroTools.Spells.SummonUnitsTarget.html",
+          "hash": "AthVKM4JB2WrHNzoacJSQg=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
       "source_relative_path": "api-macroTools/MacroTools.Spells.Transfer.yml",
       "output": {
         ".html": {
@@ -4161,7 +4173,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.Spells.html",
-          "hash": "YHPQOHmwmItysQSiBDvb+w=="
+          "hash": "08l0nztxODgGbMsDypsGPg=="
         }
       },
       "is_incremental": false,
@@ -4377,7 +4389,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/toc.html",
-          "hash": "h2DLtbVju/mE9QiGvcBeMQ=="
+          "hash": "y9nNYDcOylVWEUesGc+Wmg=="
         }
       },
       "is_incremental": false,
@@ -9780,7 +9792,7 @@
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 807,
+          "total_file_count": 808,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
